@@ -14,27 +14,6 @@
 		],
 
 		/**
-		 * Parameter to disable all messages display
-		 *
-		 * @property {Boolean}
-		 */
-		disableAllMessages: false,
-
-		/**
-		 * Parameter to disable only error messages display
-		 *
-		 * @property {Boolean}
-		 */
-		disableErrors: false,
-
-		/**
-		 * Parameter to disable only warning messages display
-		 *
-		 * @property {Boolean}
-		 */
-		disableWarnings: false,
-
-		/**
 		 * @cfg {String}
 		 */
 		groupId: undefined,
@@ -59,11 +38,11 @@
 			if (!Ext.isEmpty(operation) && !Ext.isEmpty(operation.response) && !Ext.isEmpty(operation.response.responseText))
 				decodedResponse = CMDBuild.core.interfaces.Ajax.decodeJson(operation.response.responseText);
 
-			if (!this.disableAllMessages) {
-				if (!this.disableWarnings)
+			if (!CMDBuild.global.interfaces.Configurations.get('disableAllMessages')) {
+				if (!CMDBuild.global.interfaces.Configurations.get('disableWarnings'))
 					CMDBuild.core.interfaces.messages.Warning.display(decodedResponse);
 
-				if (!this.disableErrors)
+				if (!CMDBuild.global.interfaces.Configurations.get('disableErrors'))
 					CMDBuild.core.interfaces.messages.Error.display(decodedResponse, operation.request);
 			}
 
